DeadboltHandler implementations are now non-static and interface-based

--- a/samples-and-tests/restriction-samples/conf/application.conf
+++ b/samples-and-tests/restriction-samples/conf/application.conf
@@ -191,3 +191,6 @@ mail.smtp=mock
 %test.jpa.ddl=create-drop
 %test.mail.smtp=mock
 
+# Deadbolt-specific config
+# If you wanted, you could have a different handler per id
+deadbolt.handler=controllers.MyDeadboltHandler
