Added per-request caching

--- a/samples-and-tests/restriction-samples/conf/application.conf
+++ b/samples-and-tests/restriction-samples/conf/application.conf
@@ -194,3 +194,4 @@ mail.smtp=mock
 # Deadbolt-specific config
 # If you wanted, you could have a different handler per id
 deadbolt.handler=controllers.MyDeadboltHandler
+deadbolt.cache-user-per-request=true
